--- a/Week_8_Independent_Project_Collins_Kemboi.ipynb
+++ b/Week_8_Independent_Project_Collins_Kemboi.ipynb
@@ -121,26 +121,29 @@
         "\n",
         "The dataset for this project can be found from this [link](http://bit.ly/hypothyroid_data)\n",
         "\n",
-        "The data contains the below columns\n",
+        "The data contains the below columns;\n",
         "\n",
-        "Age\n",
-        "Sex\n",
-        "on_thyroxine\n",
-        "query_on_thyroxine\n",
-        "on_antithyroid_medicationthyroid_surgery\n",
-        "query_hypothyroid\n",
-        "query_hyperthyroid\n",
-        "pregnant\n",
-        "sick\n",
-        "tumor\n",
-        "lithium\n",
-        "goitre\n",
-        "TSH_measured\n",
-        "TSH\n",
-        "T3_measured\n",
-        "T3\n",
-        "TT4_measured\n",
-        "TT4"
+        "1. Age\n",
+        "2. Sex\n",
+        "3. on_thyroxine\n",
+        "4. query_on_thyroxine\n",
+        "5. on_antithyroid_medicationthyroid_surgery\n",
+        "6. query_hypothyroid\n",
+        "7. query_hyperthyroid\n",
+        "8. pregnant\n",
+        "9. sick\n",
+        "10. tumor\n",
+        "11. lithium\n",
+        "12. goitre\n",
+        "13. TSH_measured\n",
+        "14. TSH\n",
+        "15. T3_measured\n",
+        "16. T3\n",
+        "17. TT4_measured\n",
+        "18. TT4\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -4728,7 +4731,7 @@
         "outputId": "4b406094-3d68-492b-ccd9-3305b2909eff",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 600
+          "height": 530
         }
       },
       "source": [
@@ -4820,7 +4823,7 @@
         "outputId": "7ae2c906-c6d9-4c0b-c76e-055ed7026069",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 600
+          "height": 530
         }
       },
       "source": [
@@ -6799,8 +6802,292 @@
         "colab_type": "text"
       },
       "source": [
-        "> ## **Support Vector Machines**"
+        "> # **Support Vector Machines**"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J2A84L59pYAm",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Linear Regression"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1-AEprrFoRyo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#  Split the data into train and test set,for every 10 observations 8 will go training the model and 2 testing\n",
+        "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SwdOwtCRqLY5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#importing library and setting kernel to linear\n",
+        "from sklearn.svm import SVC,LinearSVC\n",
+        "svm_model = SVC(kernel = 'linear', random_state=0)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u6oSPdsrqPai",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# fitting our train dataset\n",
+        "svm_model.fit(x_train, y_train)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Vkxr-sVzqVKv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#predicting with the test set\n",
+        "y_pred = svm_model.predict(x_test)\n",
+        "print(y_pred)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2mHJc1J5qcoK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Testing the accuracy of model\n",
+        "accuracy = accuracy_score(y_test, y_pred)\n",
+        "accuracy"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tkPnUaWUqjN0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Performance Evaluation using Confusion matrix\n",
+        "\n",
+        "con_mat = confusion_matrix(y_test, y_pred)\n",
+        "\n",
+        "con_mat"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8UIoyV5vq3Mp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AJqtX4QUq547",
+        "colab_type": "text"
+      },
+      "source": [
+        "> ## Polynomial Regression"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wjMoDKumrMyw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#  Split the data into train and test set,for every 10 observations 8 will go training the model and 2 testing\n",
+        "x_train, x_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z2DxMJXRrQoh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Setting the kernel to polynomial\n",
+        "\n",
+        "polyclassifier = SVC(kernel = 'poly', degree = 2, gamma='auto')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3DugZ-bPrgAK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Fitting the model to the training set\n",
+        "\n",
+        "polyclassifier.fit(x_train,y_train)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e80QtLRPrr8J",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Prediction based on the independent test\n",
+        "\n",
+        "y_pred = polyclassifier.predict(x_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gv17lledr2Rb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Testing the accuracy of model\n",
+        "accuracy = accuracy_score(y_test, y_pred)\n",
+        "accuracy"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V0l8L17TsLpC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Performance Evaluation using Confusion matrix\n",
+        "\n",
+        "con_mat2 = confusion_matrix(y_test, y_pred)\n",
+        "\n",
+        "con_mat2"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6z_5JPlWsV-Z",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Radial Basis Function"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vKkjREbJs7zB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Setting the kernel to RBF\n",
+        "\n",
+        "rbf = SVC(kernel = 'rbf')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SHozgpY0tR0R",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# fitting the training dataset\n",
+        "rbf.fit(x_train, y_train)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9TmhPsEqtaBf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# checking predicted values\n",
+        "y_pred = rbf.predict(x_test)\n",
+        "\n",
+        "print(y_pred)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZZzOGTu_tiHI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Testing the accuracy of model\n",
+        "accuracy3 = accuracy_score(y_test, y_pred)\n",
+        "accuracy3"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
