--- a/Week_8_Independent_Project_Collins_Kemboi.ipynb
+++ b/Week_8_Independent_Project_Collins_Kemboi.ipynb
@@ -6919,6 +6919,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "v-9i2i5I5QrC",
+        "colab_type": "text"
+      },
+      "source": [
+        "All the three models had a high prediction score, however the Gradient Bososted Tree had a higher accuracy."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "7WhG6clDB4QT",
         "colab_type": "text"
       },
@@ -7449,6 +7459,16 @@
           },
           "execution_count": 125
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U7n36-b84wZo",
+        "colab_type": "text"
+      },
+      "source": [
+        "**All our models had an accuracy score of 98%, however polynomial and RBF are dynamic in prediction**"
       ]
     }
   ]
